syntax = "proto3";
package com.odc.checklist.v1;

option java_multiple_files = true;
option java_package = "com.odc.checklist.v1";
option java_outer_classname = "ChecklistServiceProto";

service ChecklistService {
  rpc GetDescriptions(GetDescriptionsRequest) returns (GetDescriptionsResponse);
}

message GetDescriptionsRequest {
  repeated string ids = 1;
}

message GetDescriptionsResponse {
  repeated string descriptions = 1;
}
